# traffic-sensor

./: .gitignore  CMakeLists.txt  blob.cpp  blob.h  blobbuilder.h  blobrefs.h  blobtracker.cpp  blobtracker.h  counter.h  main.cpp  movingaverage.h  sma.h  weightedmovingaverage.cpp  weightedmovingaverage.h
include/: arrow-head.h  arrow-open.h  blob.h  blobtracker.h  count-topic.h  counter.h  logging-observer.h  trackutils.h
patterns/: CMakeLists.txt  observer.h  subject.h  topic.h
preprocessing/: CMakeLists.txt  emavg.cpp  emavg.h  wmavg.h
res/: db-config.proto  labels.text  tracker.yaml
src/: arrow-head.cpp  blob.cpp  blobtracker.cpp  db-handler.h  main.cpp
